samples/_failures_safe/1761605551_7a2ec4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ced107ba.c: In function ‘main’:
./samples/SAFE/__tmp_ced107ba.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("\n");
      |     ^~~~~~
